# BlackChamber-ICES

./: .env.example  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  README.md  backlog_results.json  docker-compose.test.yml  docker-compose.yml
.agent/rules/: execution-of-code.md
.jules/: sentinel.md
analysis/: Dockerfile  pyproject.toml
analysis/src/analysis/: __init__.py  celery_app.py  models.py  nlp.py  pipeline.py  tasks.py
analysis/src/analysis/analyzers/: __init__.py  _base.py  attachment_analyzer.py  bec_analyzer.py  bec_db.py  bec_models.py  header_analyzer.py  saas_usage_analyzer.py  spamhaus_analyzer.py  url_analyzer.py
analysis/src/analysis/analyzers/attachment/: __init__.py
analysis/src/analysis/analyzers/bec/: __init__.py  analyzer.py  db.py  models.py  signals.py
analysis/src/analysis/analyzers/header/: __init__.py  analyzer.py
analysis/src/analysis/analyzers/reputation/: __init__.py  analyzer.py
analysis/src/analysis/analyzers/saas/: __init__.py  analyzer.py
analysis/src/analysis/analyzers/spamhaus/: __init__.py
analysis/src/analysis/analyzers/url/: __init__.py
analysis/src/analysis/data/: saas_vendors.json  saas_vendors_hf.jsonl
analysis/tests/: test_analyzers.py  test_bec_analyzer.py  test_pipeline.py  test_reputation.py  test_schema_compat.py  test_spamhaus.py
config/: config.yaml
ingestion/: Dockerfile  go.mod  go.sum
ingestion/cmd/backfill/: main.go
ingestion/cmd/server/: main.go
ingestion/internal/activityfeed/: client.go  poller.go
ingestion/internal/backfill/: backfill.go  backfill_test.go
ingestion/internal/config/: config.go
ingestion/internal/dedup/: dedup.go
ingestion/internal/delta/: syncer.go  syncer_test.go
ingestion/internal/discovery/: users.go  users_test.go
ingestion/internal/graph/: fetcher.go  parser.go
ingestion/internal/models/: email.go
ingestion/internal/queue/: publisher.go
ingestion/internal/subscription/: manager.go  manager_test.go  store.go
ingestion/internal/webhook/: handler.go  handler_test.go
scripts/: backlog_test.py  compile_saas_catalog.py  test_e2e.py
shared/: db.py  pyproject.toml
shared/schemas/: email_event.json
shared/src/ices_shared/: __init__.py  celery_defaults.py  config.py  db.py  models.py
verdict/: Dockerfile  pyproject.toml
verdict/scripts/: test_quarantine_live.py
verdict/src/verdict/: __init__.py  batch_client.py  celery_app.py  dispatcher.py  models.py  policy_engine.py  tasks.py  token_manager.py
verdict/src/verdict/actions/: __init__.py  _base.py  delete.py  quarantine.py  tag.py
verdict/tests/: __init__.py  test_batch_client.py  test_dedup.py  test_dispatcher.py  test_quarantine.py  test_token_manager.py
webui/: Dockerfile  pyproject.toml
webui/frontend/src/: App.jsx  api.js  index.css
webui/frontend/src/components/: ObservationBadge.jsx  StageCard.jsx  StatsCard.jsx  StatusBadge.jsx
webui/frontend/src/pages/: Dashboard.jsx  Login.jsx  MessageDetail.jsx  SaaSUsage.jsx
webui/src/webui/: __init__.py  auth.py  main.py  queries.py  security.py
webui/tests/: test_auth.py  test_auth_config.py  test_login_rate_limit.py  test_path_traversal.py  test_rate_limit.py  test_rate_limiter.py  test_security.py
