[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ices-webui"
version = "0.1.0"
description = "BlackChamber ICES — WebUI Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-jose[cryptography]>=3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
